V2.5.2 (coming soon)
	* Introduced Apache Lucene as fuzzy text search engine.
	* Added a "System config" tab in Admin view for re-building Lucene index.
	* Allows to change translation status of selected labels for all languages in "String settings" view.
	* Show progress bar when parsing uploaded dictionary files
	* Change associated language of "GAE" from "English" to "General Alcatel English"
	* It becomes possible that "English" is not reference language.
	* Bug fix of missing languages in Label translation view
	* Bug fix of initial translation status of empty translation

V2.5.1 (May. 17, 2013)
	* Updated User Manual
	* Bug fix of Standard Excel dictionary parser
	* Corrected some language names

V2.5.0 (May. 10, 2013)
	* New dictionary format support: PO
	* New dictionary format support: XMLHelp
	* Group text search results by their parent product/application/dictionary
	* Take into account language filters when updating translation status in a batch
	* Allows to import XMLDict dictionaries without project file (.xdcp)
	* Perform auto match of translation when adding new language/labels to a dictionary
	* Optimized performance of auto matching translations
	* Bug fix of incorrect order of new labels added manually

V2.3.2 (Apr. 26, 2013)
    * Added "Translation type" and "Last updated" information in Translation details
    * Bug fix of file not closed issue during importing

V2.3.1 (Apr. 23, 2013)
	* Take "GAE" (if exists) as reference for CMS XML dictionary
	* Read context information from VoiceApp XML dictionary and disable auto-translation for specific contexts
	* Bug fix of reference code display for some dict formats

V2.3.0 (Apr. 18, 2013)
	* User management (Admin only)
	* New dictionary format support: VoiceApp XML
	* Allow to adjust format of translation task file (Excel), only content is locked
	* Bug fix of some dictionary parsers (OTC PC, ACS text, Standard Excel)

V2.2.0 (Apr. 10, 2013)
 What's new in DMS 2.2.0
    * Major Highlights