@@ -7,8 +7,11 @@ import com.alcatel_lucent.dms.service.LanguageService;
 import org.hibernate.search.FullTextSession;
 import org.hibernate.search.Search;
 import org.hibernate.search.SearchFactory;
+import org.hibernate.search.batchindexing.MassIndexerProgressMonitor;
 import org.hibernate.search.impl.SimpleIndexingProgressMonitor;
 import org.hibernate.search.stat.Statistics;
+
+import java.util.concurrent.TimeUnit;
 
 @SuppressWarnings("serial")
 public class ConfigAction extends JSONAction {
@@ -22,17 +25,36 @@ public class ConfigAction extends JSONAction {
     }
 
     private DaoService daoService;
-	
-
 
 	@Override
+    // TODO: printStatusMessage in event
+
 	protected String performAction() throws Exception {
 		log.info("ConfigAction...");
         FullTextSession fullTextSession = Search.getFullTextSession(daoService.getSession());
-        fullTextSession.createIndexer().startAndWait();
-        Statistics statistics=fullTextSession.getSearchFactory().getStatistics();
+        fullTextSession.createIndexer().progressMonitor(new SimpleIndexingProgressMonitor() {
+            @Override
+            protected void printStatusMessage(long starttime, long totalTodoCount, long doneCount) {
+                long elapsedMs = TimeUnit.NANOSECONDS.toMillis( System.nanoTime() - starttime );
+                log.info( "{} documents indexed in {} ms", doneCount, elapsedMs );
+                float estimateSpeed = doneCount * 1000f / elapsedMs;
+                float estimatePercentileComplete = doneCount * 100f / totalTodoCount;
+                log.info( "Indexing speed: {} documents/second; progress: {}%", estimateSpeed, estimatePercentileComplete );
+            }
 
+            @Override
+            public void indexingCompleted() {
+                super.indexingCompleted();
+//                log.info( "Reindexed {} entities", totalCounter.get() );
+            }
 
+            @Override
+            public void addToTotalCount(long count) {
+                super.addToTotalCount(count);
+//                totalCounter.addAndGet( count );
+//                log.info( "Going to reindex {} entities", count );
+            }
+        }).startAndWait();
         setMessage("Index create successful.");
 		return SUCCESS;
 	}
